# problems

./: .gitignore  .gitmodules
8/: compile_commands.json
8/assets/: .input.swp
8/src/: .main.cpp.swo  .main.cpp.swp  main.cpp
9/: compile_commands.json
9/headers/: utils.h
9/src/: main.cpp
aoc/: 1.hs
codechef/BAL/assets/: input
codechef/BAL/perl6/: main.p6
codechef/BAL/python/: input  main.py
codechef/MINDSUM/cpp/: CMakeLists.txt
codechef/MINDSUM/python/: main.py
codechef/ROBOGAME/python/: main.py
complib/: contalias.h  iterators.h  loops.h  main.cpp  math.h  matrices.h  pprint.h
custom/python/1/: README.rst  pyproject.toml
euler/1/: main.cpp
euler/2/src/: main.cpp
euler/5/: main.cpp
euler/coconut/: pyproject.toml
euler/j/1/: main.j
euler/old/coconut/: tmp
euler/old/python/: pyproject.toml
euler/perl6/1/: main.p6
euler/python/python/: 1.py  tmp.py  utils.py
euler/rust/2/: solve.sh
golfstack/python/: 'tmp.py'  tmp.py
golfstack/python/python/: 1.py
hackerrank/101_55/1/: compile_commands.json
hackerrank/HourRank29/1/: main.lua
hackerrank/HourRank29/2/: input  main.lua
hashcode/entry2019/: Cargo.toml
jwiki/: test.j
leetcode/1BitAnd2BitCharacters/: README.md
leetcode/688/: README.md
leetcode/KnightDialer/: README.md
leetcode/MaximumLengthOfRepeatedSubarray/: README.md
leetcode/MinimumFallingPathSum/: README.md
leetcode/ShortestDistanceToACharacter/: README.md
reply/19-10-11/coding-2/: Cargo.toml
reply/19-10-11/coding-2/assets/matrices/: 4x5.ron
reply/19-10-11/coding-2/src/: lib.rs  main.rs
(+59 files in other folders)
