[package]
name = "coding-2"
version = "0.1.0"
authors = ["Bietola <dincio.montesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tuple = "0.5.0"
educe = "0.4.13"
cmp_macros = { git = "https://github.com/Bietola/cmp_macros" }
